<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RGB</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="Black">BLK</string>
    <string name="White">WHT</string>
    <string name="Red">RED</string>
    <string name="Blue">BLU</string>
    <string name="Green">GRN</string>
    <string name="Grey">GRE</string>
    <string name="Yellow">YLW</string>
    <string name="Pink">PNK</string>
    <color name="Black">#000000</color>
    <color name="White">#ffffff</color>
    <color name="Red">#ff0000</color>
    <color name="Green">#00ff00</color>
    <color name="Blue">#0000ff</color>
    <color name="Grey">#f5f5f5</color>
    <color name="Yellow">#ffff00</color>
    <string name="Greenishblue">G_B</string>
    <color name="Greenishblue">#00ffff</color>
    <color name="Pink">#ff00ff</color>

</resources>