<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/mainlayout"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >
    
    
    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="ONCLICK"
        android:layout_centerHorizontal="true"
        android:text="@string/Yellow" />

    <Button
        android:id="@+id/button2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="ONCLICK"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/button1"
        android:text="@string/Greenishblue" />

    <Button
        android:id="@+id/button3"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:onClick="ONCLICK"
        android:layout_alignBottom="@+id/button1"
        android:layout_toLeftOf="@+id/button1"
        android:text="@string/Pink" />

    <Button
        android:id="@+id/button6"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="ONCLICK"
        android:layout_above="@+id/button1"
        android:layout_toLeftOf="@+id/button1"
        android:text="@string/White" />

    <Button
        android:id="@+id/button7"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="ONCLICK"
        android:layout_alignBottom="@+id/button6"
        android:layout_alignLeft="@+id/button2"
        android:text="@string/Red" />

    <Button
        android:id="@+id/button8"
        style="?android:attr/buttonStyleSmall"
        android:onClick="ONCLICK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button7"
        android:layout_alignBottom="@+id/button7"
        android:layout_alignLeft="@+id/button1"
        android:text="@string/Green" />

    <Button
        android:id="@+id/button9"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button6"
        android:onClick="ONCLICK"
        android:layout_centerHorizontal="true"
        android:text="@string/Blue" />

    <Button
        android:id="@+id/button5"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button6"
        android:layout_toLeftOf="@+id/button3"
        android:onClick="ONCLICK"
        android:text="@string/Black" />

    <Button
        android:id="@+id/button4"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/button2"
        android:onClick="ONCLICK"
        android:text="@string/Grey" />

</RelativeLayout>